tests/NormalTests/paczka1/fuzzy1/51559334.err
Error in line 6: S831 S704 37,18
Error in line 10: jTmiMq2MqP S430 4&,3
Error in line 8: S831 S430 60,7
Error in line 9: jTmiMq2MqP S831 59,0
Error in line 14: rYAjN S704 13,2
Error in line 11: S831 A38 40,4
Error in line 20: rYAjN A38 -3,0
Error in line 16: rYAjN A38 75,7
Error in line 23: rYAjN S704 49,8
Error in line 15: jTmiMq2MqP S430 194,3
Error in line 35: x8celMAaMZ S704 5,3
